[gd_scene load_steps=3 format=3 uid="uid://bavgjda40fjm8"]

[ext_resource type="Script" uid="uid://dfetqxpt5xr6k" path="res://config/config.gd" id="1_sd3rd"]
[ext_resource type="Texture2D" uid="uid://c6cco0qpbpqlc" path="res://titlescreen/titlescreen_background.png" id="2_oymex"]

[node name="Config" type="Node2D"]
script = ExtResource("1_sd3rd")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 240)
texture = ExtResource("2_oymex")
metadata/_edit_lock_ = true

[node name="Loads" type="Node2D" parent="."]

[node name="Label1" type="Label" parent="Loads"]
modulate = Color(1, 0, 0, 1)
offset_left = 48.0
offset_top = 32.0
offset_right = 165.0
offset_bottom = 55.0
text = "Open See Face:"

[node name="Label2" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 64.0
offset_right = 181.0
offset_bottom = 87.0
text = "Internal:"

[node name="Label3" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 96.0
offset_right = 181.0
offset_bottom = 119.0
text = "Model Type:"

[node name="Label4" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 128.0
offset_right = 181.0
offset_bottom = 151.0
text = "Resolution:"

[node name="Label5" type="Label" parent="Loads"]
offset_left = 48.0
offset_top = 160.0
offset_right = 165.0
offset_bottom = 183.0
text = "Input:"

[node name="Label6" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 192.0
offset_right = 181.0
offset_bottom = 215.0
text = "Accept"

[node name="Label7" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 224.0
offset_right = 181.0
offset_bottom = 247.0
text = "Deny"

[node name="Label8" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 256.0
offset_right = 181.0
offset_bottom = 279.0
text = "Left"

[node name="Label9" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 288.0
offset_right = 181.0
offset_bottom = 311.0
text = "Right"

[node name="Label10" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 320.0
offset_right = 181.0
offset_bottom = 343.0
text = "Up"

[node name="Label11" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 352.0
offset_right = 181.0
offset_bottom = 375.0
text = "Down"

[node name="Label12" type="Label" parent="Loads"]
offset_left = 48.0
offset_top = 384.0
offset_right = 167.0
offset_bottom = 407.0
text = "Model Settings:"

[node name="Label13" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 416.0
offset_right = 183.0
offset_bottom = 439.0
text = "Model: 1"

[node name="Label14" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 448.0
offset_right = 213.0
offset_bottom = 471.0
text = "Eyebrow Threshold"

[node name="Label15" type="Label" parent="Loads"]
offset_left = 64.0
offset_top = 480.0
offset_right = 213.0
offset_bottom = 503.0
text = "Mouth Threshhold"
